--- a/src/index.css
+++ b/src/index.css
@@ -12,11 +12,16 @@ ul {
   margin: 0;
 }
 
-p{
+p {
   color: rgb(59, 59, 59);
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   color: rgb(59, 59, 59);
 }
 
