--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -16,5 +16,11 @@
 
 .navlinks a {
   text-decoration: none;
-  color: rgb(59, 59, 59);
+  color: rgb(11, 12, 100);
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.navlinks a:hover {
+  color: rgb(44, 124, 161);
 }
